<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear_white"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:onClick="dismiss"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/close"
                android:layout_toRightOf="@id/close"
                android:paddingLeft="@dimen/text_margin"
                android:paddingStart="@dimen/text_margin"
                android:textAppearance="@style/AppTheme.AlertDialog.Title.Text"
                tools:text="@string/add_student_to_class"/>

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:text="@string/save" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/grade_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_grade"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:background="@color/slightly_dark_background"
        android:orientation="vertical"
        android:elevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_margin"
            android:text="@string/select_students"
            android:elevation="4dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"/>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/all_students_are_here"/>

    </LinearLayout>

</LinearLayout>