<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/close"
                android:layout_width="@dimen/icon_size_toolbar_left_width"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_clear"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="@dimen/icon_padding"
                android:paddingBottom="@dimen/icon_padding"
                android:paddingRight="@dimen/icon_padding"
                android:paddingEnd="@dimen/icon_padding"
                android:clickable="true" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/close"
                android:layout_toRightOf="@id/close"
                android:paddingLeft="@dimen/screen_edge_margin"
                android:paddingStart="@dimen/screen_edge_margin"
                android:gravity="center_vertical"
                android:textAppearance="@style/AppTheme.AlertDialog.Title.Text"
                tools:text="@string/add_student"/>

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_marginRight="@dimen/screen_edge_margin"
                android:layout_marginEnd="@dimen/screen_edge_margin"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:text="@string/save"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_edge_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_first_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_edge_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_last_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_edge_margin"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:gravity="center"
        android:padding="6dp"
        tools:text="Né(e) le 20 Mars 2013"/>

</LinearLayout>